# pledge

./: .clang-format  CMakeLists.txt  Executor.hpp  Future.hpp  LICENSE  ManualExecutor.hpp  Promise.hpp  README.md  Tests.cpp  ThreadPoolExecutor.hpp  Traits.hpp  future.hpp  main.cpp  manual_executor.hpp  promise.hpp  thread_pool_executor.hpp  traits.hpp
details/: FutureData.hpp  FutureImpl.hpp  PromiseImpl.hpp  Traits.hpp
